# SIR-Simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SIRGroups.cpp  SIR_data.csv  SIR_graph.root  SIR_population.cpp  SIR_population.hpp  display.cpp  display.hpp  display.test.cpp  evolution.hpp  incubation_infection.cpp  incubation_infection.test.cpp  infection.cpp  infection.hpp  infection.test.cpp  motion.hpp  simple_infection.cpp  simulatio_test.cpp  simulation.cpp  simulation.hpp  simulation.test.cpp  test  test.cpp
include/: display.hpp  incubation_infection.hpp  infection.hpp  motion.hpp  plot.hpp  population.hpp  random_motion.hpp  simple_infection.hpp  simulation.hpp  simulation_plot.hpp
src/: CMakeLists.txt  SIR_population.cpp  display.cpp  incubation_infection.cpp  main.cpp  motion.cpp  plot.cpp  population.cpp  random_motion.cpp  simple_infection.cpp  simple_infection_new.cpp  simulation.cpp  simulation_plot.cpp
tests/: CMakeLists.txt  display.test.cpp  incubation_infection.test.cpp  motion.test.cpp  plot.test.cpp  simple_infection.test.cpp  simulation.test.cpp  simulation_plot.test.cpp  simulation_state.test.cpp
tex/: Relazione.aux  Relazione.blg  Relazione.fdb_latexmk  Relazione.fls  Relazione.tex  parameters.txt
